# dd-frontend

./: .gitignore  README.md  example.iso  index.html  neutralino.config.json  package-lock.json  package.json  test.sh  vite.config.js
.github/: FUNDING.yml
.github/workflows/: deploy.yml
.tmp/: auth_info.json  window_state.config.json
assets/: index-BcnlIo1D.css  index-Bi7VYw9D.css  index-BwT7GzYK.js  index-CBBUyJMJ.js  index-D7dxFHk2.js  index-DHaULREM.css  index-Du1QX3pq.js  index-WFRm1lIs.js  index-_qtSdqQk.css  index-rHm8ZB6B.js
src/: App.css  App.jsx  App.vue  main.jsx  store.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfigButton.jsx  ConfigPage.jsx  ConvertButton.jsx  DiskList.jsx  Download.vue  FileSections.jsx  Footer.jsx  Header.vue  Warning.vue
src/utilities/: commands.js  scripts.js  services.js
